Completed integrating the category module