@@ -2,7 +2,13 @@ package in.bushansirgur.expensetrackerapi.controller;
 
 import java.sql.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import in.bushansirgur.expensetrackerapi.dto.CategoryDTO;
+import in.bushansirgur.expensetrackerapi.dto.ExpenseDTO;
+import in.bushansirgur.expensetrackerapi.io.CategoryResponse;
+import in.bushansirgur.expensetrackerapi.io.ExpenseRequest;
+import in.bushansirgur.expensetrackerapi.io.ExpenseResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -27,47 +33,87 @@ public class ExpenseController {
 	private ExpenseService expenseService;
 	
 	@GetMapping("/expenses")
-	public List<Expense> getAllExpenses(Pageable page) {
-		return expenseService.getAllExpenses(page).toList();
+	public List<ExpenseResponse> getAllExpenses(Pageable page) {
+		List<ExpenseDTO> listOfExpenses = expenseService.getAllExpenses(page);
+		return listOfExpenses.stream().map(expenseDTO -> mapToResponse(expenseDTO)).collect(Collectors.toList());
 	}
 	
-	@GetMapping("/expenses/{id}")
-	public Expense getExpenseById(@PathVariable Long id){
-		return expenseService.getExpenseById(id);
+	@GetMapping("/expenses/{expenseId}")
+	public ExpenseResponse getExpenseById(@PathVariable String expenseId){
+
+		ExpenseDTO expenseDTO = expenseService.getExpenseById(expenseId);
+		return mapToResponse(expenseDTO);
 	}
 	
 	@ResponseStatus(value = HttpStatus.NO_CONTENT)
 	@DeleteMapping("/expenses")
-	public void deleteExpenseById(@RequestParam Long id) {
-		expenseService.deleteExpenseById(id);
+	public void deleteExpenseById(@RequestParam String expenseId) {
+		expenseService.deleteExpenseById(expenseId);
 	}
 	
 	@ResponseStatus(value = HttpStatus.CREATED)
 	@PostMapping("/expenses")
-	public Expense saveExpenseDetails(@Valid @RequestBody Expense expense) {
-		return expenseService.saveExpenseDetails(expense);
+	public ExpenseResponse saveExpenseDetails(@Valid @RequestBody ExpenseRequest expenseRequest) {
+		ExpenseDTO expenseDTO = mapToDTO(expenseRequest);
+		expenseDTO = expenseService.saveExpenseDetails(expenseDTO);
+		return mapToResponse(expenseDTO);
 	}
-	
-	@PutMapping("/expenses/{id}")
-	public Expense updateExpenseDetails(@RequestBody Expense expense, @PathVariable Long id){
-		return expenseService.updateExpenseDetails(id, expense);
+
+	private ExpenseResponse mapToResponse(ExpenseDTO expenseDTO) {
+		return ExpenseResponse.builder()
+				.expenseId(expenseDTO.getExpenseId())
+				.name(expenseDTO.getName())
+				.description(expenseDTO.getDescription())
+				.amount(expenseDTO.getAmount())
+				.date(expenseDTO.getDate())
+				.category(mapToCategoryResponse(expenseDTO.getCategoryDTO()))
+				.createdAt(expenseDTO.getCreatedAt())
+				.updatedAt(expenseDTO.getUpdatedAt())
+				.build();
+	}
+
+	private CategoryResponse mapToCategoryResponse(CategoryDTO categoryDTO) {
+		return CategoryResponse.builder()
+				.categoryId(categoryDTO.getCategoryId())
+				.name(categoryDTO.getName())
+				.build();
+	}
+
+	private ExpenseDTO mapToDTO(ExpenseRequest expenseRequest) {
+		return ExpenseDTO.builder()
+				.name(expenseRequest.getName())
+				.description(expenseRequest.getDescription())
+				.amount(expenseRequest.getAmount())
+				.date(expenseRequest.getDate())
+				.categoryId(expenseRequest.getCategoryId())
+				.build();
+	}
+
+	@PutMapping("/expenses/{expenseId}")
+	public ExpenseResponse updateExpenseDetails(@RequestBody ExpenseRequest expenseRequest, @PathVariable String expenseId){
+		ExpenseDTO updatedExpense = mapToDTO(expenseRequest);
+		updatedExpense = expenseService.updateExpenseDetails(expenseId, updatedExpense);
+		return mapToResponse(updatedExpense);
 	}
 	
 	@GetMapping("/expenses/category")
-	public List<Expense> getExpensesByCategory(@RequestParam String category, Pageable page) {
-		return expenseService.readByCategory(category, page);
+	public List<ExpenseResponse> getExpensesByCategory(@RequestParam String category, Pageable page) {
+		List<ExpenseDTO> list = expenseService.readByCategory(category, page);
+		return list.stream().map(expenseDTO -> mapToResponse(expenseDTO)).collect(Collectors.toList());
 	}
 	
 	@GetMapping("/expenses/name")
-	public List<Expense> getExpensesByName(@RequestParam String keyword, Pageable page) {
-		return expenseService.readByName(keyword, page);
+	public List<ExpenseResponse> getExpensesByName(@RequestParam String keyword, Pageable page) {
+		List<ExpenseDTO> list = expenseService.readByName(keyword, page);
+		return list.stream().map(expenseDTO -> mapToResponse(expenseDTO)).collect(Collectors.toList());
 	}
 	
 	@GetMapping("/expenses/date")
-	public List<Expense> getExpensesByDates(@RequestParam(required = false) Date startDate,
+	public List<ExpenseResponse> getExpensesByDates(@RequestParam(required = false) Date startDate,
 											@RequestParam(required = false) Date endDate,
 											Pageable page) {
-		return expenseService.readByDate(startDate, endDate, page);
+		List<ExpenseDTO> list = expenseService.readByDate(startDate, endDate, page);
+		return list.stream().map(expenseDTO -> mapToResponse(expenseDTO)).collect(Collectors.toList());
 	}
 }
 
